--- a/20230409/index.html
+++ b/20230409/index.html
@@ -524,7 +524,7 @@
                             <div class="header" style="width: 100%;height: 90px;text-align: center;">
                                 <img src="../images/header.png" class="header-img" width="160" height="100" style="border: none;-ms-interpolation-mode: bicubic;max-width: 100%;width: 160px;height: 100px;margin-left: -825px;">
                             </div>
-                            <div class="server-name" style="font-size: 30px;text-align: center;">zeiflix</div>
+                            <div class="server-name" style="font-size: 30px;text-align: center;">Week of:</div>
                             <div class="dates" style="color: #aaaaaa;font-size: 20px;text-align: center;">2023-04-02 - 2023-04-09</div>
                         </td>
                     </tr>
