--- a/20230416/index.html
+++ b/20230416/index.html
@@ -522,7 +522,7 @@
                     <tr>
                         <td class="wrapper" style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 14px;vertical-align: top;box-sizing: border-box;padding: 5px;overflow: auto;">
                             <div class="header" style="width: 100%;height: 90px;text-align: center;">
-                                <img src="../images/header.png" class="header-img" width="160" height="100" style="border: none;-ms-interpolation-mode: bicubic;max-width: 100%;width: 160px;height: 100px;margin-left: -825px;">
+                                <img src="../images/header.png" class="header-img" width="160" height="100" style="border: none;-ms-interpolation-mode: bicubic;max-width: 100%;width: 160px;height: 100px;vertical-align: middle;margin-left: 0;">
                             </div>
                             <div class="server-name" style="font-size: 30px;text-align: center;">Week of:</div>
                             <div class="dates" style="color: #aaaaaa;font-size: 20px;text-align: center;">2023-04-09 - 2023-04-16</div>
