--- a/20230416/index.html
+++ b/20230416/index.html
@@ -531,7 +531,7 @@
                     <tr>
                         <td class="wrapper" style="font-family: 'Open Sans', Helvetica, Arial, sans-serif;font-size: 14px;vertical-align: top;box-sizing: border-box;padding: 5px;overflow: auto;">
                             <div class="sub-header-bar" style="margin-left: auto;margin-right: auto;font-size: 30px;text-align: center;width: 200px;border-top: 1px solid #E5A00D;margin-top: 15px;margin-bottom: 25px;"></div>
-                            <div class="body-message" style="font-size: 20px;text-align: center;width: 80%;margin-left: auto;margin-right: auto;">【推しの子】Oshi no ko is SSS+++, 10/10, God Tier anime.</div>
+                            <div class="body-message" style="font-size: 20px;text-align: center;width: 80%;margin-left: auto;margin-right: auto;">【推しの子】Oshi no ko is SSS+++, 10/10, God Tier anime.<br>Also, I will be in Japan starting at the end of the week.<br>So plex won't be updated while I'm out.</div>
                         </td>
                     </tr>
                     <tr>
